# xlings

./: .gitignore  .gitmodules  .xlings.json  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh.md  skills-lock.json  xmake.lua
.github/: CODEOWNERS
config/: xlings copy.json  xlings.json
core/: capability.cppm  checker.lua  cli.cppm  cmdprocessor.cppm  common.lua  config.cppm  curl.cppm  drepo.lua  event.cppm  event_stream.cppm  i18n.cppm  init.lua  log.cppm  main.cpp  mini_run.lua  platform.cppm  platform.lua  profile.cppm  subos.cppm  task.cppm  tinyhttps.cppm  ui.cppm  utils.cppm  xim.cppm  xlings.lua  xmake.lua  xpack.lua  xself.cppm  xself.lua
core/xvm/: .gitignore  .workspace.xvm.yaml  Cargo.toml  README.md  commands.cppm  db.cppm  release-build.sh  shim.cppm  types.cppm  workspace.xvm.yaml  xvm.desktop
core/xvm/config/: .workspace.xvm.yaml  cmd.template  config.xvm.yaml  versions.xvm.yaml  workspace.xvm.yaml
core/xvm/shim/: main.rs
core/xvm/src/: baseinfo.rs  cmdprocessor.rs  handler.rs  helper.rs  main.rs
core/xvm/xvmlib/: config.rs  desktop.rs  lib.rs  shims.rs  versiondb.rs  workspace.rs
d2x-repo/: README.md
docs/: README.md  architecture.md  changelog.md  quick-install.md  quick_start.md  shim-optimization-design.md
drepo/: README.md  d2cpp.drepo  d2ds.drepo  d2python.drepo  d2x.drepo  xlings.drepo
examples/: README.md
src/: capabilities.cppm  cli.cppm  core.cppm  interface.cppm  libs.cppm  main.cpp  platform.cppm  runtime.cppm
tests/: README.md
tools/: install-from-release.ps1  install-from-release.sh  install.linux.sh  (+16 more)
(+499 files in other folders)
